corrected some stuff on mobile

--- a/public/css/profil.css
+++ b/public/css/profil.css
@@ -14,7 +14,7 @@ html {
 #logo {
   top: 2%;
   left: 2%;
-  height: 75px;
+  height: 50px;
   position: absolute;
   z-index: 1;
   cursor: pointer;
