--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -293,14 +293,14 @@ html {
   --btn-shadow-color: rgba(0, 0, 0, 0.137);
   --btn-shadow: 0 2px 10px 0 var(--btn-shadow-color);
   --hover-btn-color: rgb(255, 0, 149);
-  --font-size: 2rem;
+  --font-size: 0.8rem;
   /* 👆 this field should not be empty */
   --font-weight: 600;
   --font-family: Menlo, Roboto Mono, monospace;
   /* 👆 this field should not be empty */
   border-radius: 30px 0px 30px 0px;
   box-sizing: border-box;
-  padding: 1.1rem;
+  padding: 1rem;
   justify-content: center;
   color: #0dff00;
   font: var(--font-weight) var(--font-size) var(--font-family);
